{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 29,
  "lineage": "e76b0c5d-2195-e701-9979-bb0e85840e30",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "chatter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00f2e04d5ef782bd4",
            "arn": "arn:aws:ec2:us-east-1:270163127745:elastic-ip/eipalloc-00f2e04d5ef782bd4",
            "association_id": "eipassoc-0ddcce7ee409cc958",
            "domain": "vpc",
            "id": "eipalloc-00f2e04d5ef782bd4",
            "instance": "i-099749e1cae6ce401",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0699823ed0cc50f36",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-54-209-61-17.compute-1.amazonaws.com",
            "public_ip": "54.209.61.17",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chatter-eip"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-eip",
              "Project": "Chatter"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.chatter",
            "aws_iam_role.chatter_ec2",
            "aws_instance.chatter",
            "aws_internet_gateway.main",
            "aws_security_group.chatter",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "chatter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b13f11600160c10",
            "arn": "arn:aws:ec2:us-east-1:270163127745:instance/i-099749e1cae6ce401",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "chatter-instance-profile",
            "id": "i-099749e1cae6ce401",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "chatter-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0699823ed0cc50f36",
            "private_dns": "ip-10-0-1-194.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-215-142-235.compute-1.amazonaws.com",
            "public_ip": "3.215.142.235",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:270163127745:key/bfd1f50d-ebc1-4d46-bdb4-3ffef3be746e",
                "tags": {
                  "Name": "chatter-root-volume"
                },
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "Terraform",
                  "Name": "chatter-root-volume",
                  "Project": "Chatter"
                },
                "throughput": 125,
                "volume_id": "vol-071e34ae701149acf",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d391429986e6e136",
            "tags": {
              "Name": "chatter-server"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-server",
              "Project": "Chatter"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cd7464a6e3b6be3c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.chatter",
            "aws_iam_role.chatter_ec2",
            "aws_security_group.chatter",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270163127745:internet-gateway/igw-0b6ccdcb0eb4a887a",
            "id": "igw-0b6ccdcb0eb4a887a",
            "owner_id": "270163127745",
            "tags": {
              "Name": "chatter-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-igw",
              "Project": "Chatter"
            },
            "vpc_id": "vpc-045665e3542073414"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270163127745:route-table/rtb-032cf9c696f60379b",
            "id": "rtb-032cf9c696f60379b",
            "owner_id": "270163127745",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6ccdcb0eb4a887a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chatter-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-public-rt",
              "Project": "Chatter"
            },
            "timeouts": null,
            "vpc_id": "vpc-045665e3542073414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052a4694deaa51466",
            "route_table_id": "rtb-032cf9c696f60379b",
            "subnet_id": "subnet-0d391429986e6e136"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049f426c7cd1ab17c",
            "route_table_id": "rtb-032cf9c696f60379b",
            "subnet_id": "subnet-07671b37fb6aa5d87"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "chatter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270163127745:security-group/sg-0cd7464a6e3b6be3c",
            "description": "Security group for Chatter application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd7464a6e3b6be3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "203.0.113.0/32"
                ],
                "description": "SSH from your IP only - Update var.your_ip_address to change",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chatter-sg",
            "name_prefix": "",
            "owner_id": "270163127745",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chatter-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-sg",
              "Project": "Chatter"
            },
            "timeouts": null,
            "vpc_id": "vpc-045665e3542073414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270163127745:subnet/subnet-0d391429986e6e136",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d391429986e6e136",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270163127745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chatter-public-subnet-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-public-subnet-1",
              "Project": "Chatter"
            },
            "vpc_id": "vpc-045665e3542073414"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270163127745:subnet/subnet-07671b37fb6aa5d87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07671b37fb6aa5d87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "270163127745",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chatter-public-subnet-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-public-subnet-2",
              "Project": "Chatter"
            },
            "vpc_id": "vpc-045665e3542073414"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:270163127745:vpc/vpc-045665e3542073414",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9b601045d4d839e",
            "default_route_table_id": "rtb-0cc5ec332cb6dc7a6",
            "default_security_group_id": "sg-080c4409046c91baa",
            "dhcp_options_id": "dopt-03009b46a7a230258",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045665e3542073414",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc5ec332cb6dc7a6",
            "owner_id": "270163127745",
            "tags": {
              "Name": "chatter-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "chatter-vpc",
              "Project": "Chatter"
            }
          }
        }
      ]
    }
  ]
}